@@ -56,9 +56,13 @@ import org.apache.druid.msq.util.MultiStageQueryContext;
 import org.apache.druid.query.DruidMetrics;
 import org.apache.druid.query.QueryContext;
 import org.apache.druid.query.aggregation.AggregatorFactory;
+import org.apache.druid.query.filter.NotDimFilter;
+import org.apache.druid.query.filter.NullFilter;
+import org.apache.druid.query.filter.RangeFilter;
 import org.apache.druid.segment.IndexSpec;
 import org.apache.druid.segment.column.ColumnType;
 import org.apache.druid.segment.column.RowSignature;
+import org.apache.druid.segment.transform.CompactionTransformSpec;
 import org.apache.druid.sql.calcite.util.CalciteTests;
 import org.apache.druid.timeline.CompactionState;
 import org.apache.druid.timeline.DataSegment;
@@ -1012,7 +1016,10 @@ public class MSQReplaceTest extends MSQTestBase
                              Collections.emptyList(),
                              Collections.singletonList(new StringDimensionSchema("user")),
                              GranularityType.HOUR,
-                             Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z")
+                             Intervals.of("2016-06-27T01:00:00.000Z/2016-06-27T02:00:00.000Z"),
+                             new CompactionTransformSpec(
+                                 new RangeFilter("v0", ColumnType.LONG, 1466989200000L, 1466992800000L, false, true, null)
+                             )
                          )
                      )
                      .verifyResults();
@@ -1648,7 +1655,10 @@ public class MSQReplaceTest extends MSQTestBase
 
     Mockito.doReturn(ImmutableSet.of(existingDataSegment))
            .when(testTaskActionClient)
-           .submit(ArgumentMatchers.isA(RetrieveUsedSegmentsAction.class));
+           .submit(new RetrieveUsedSegmentsAction(
+               EasyMock.eq("foo"),
+               EasyMock.eq(ImmutableList.of(Intervals.ETERNITY))
+           ));
 
     testIngestQuery().setSql(" REPLACE INTO foo "
                              + "OVERWRITE ALL "
@@ -1724,7 +1734,8 @@ public class MSQReplaceTest extends MSQTestBase
                                  new LongDimensionSchema("cnt")
                              ),
                              GranularityType.DAY,
-                             Intervals.ETERNITY
+                             Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                          )
                      )
                      .verifyResults();
@@ -2194,7 +2205,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.QUARTER,
-                         Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z")
+                         Intervals.of("2000-01-01T00:00:00.000Z/2002-01-01T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2274,7 +2286,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2320,7 +2333,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.HOUR,
-                         Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00")
+                         Intervals.of("2016-06-27T01:00:00/2016-06-27T02:00:00"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2368,7 +2382,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z")
+                         Intervals.of("2016-06-29T00:00:00.000Z/2016-07-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2416,7 +2431,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z")
+                         Intervals.of("2016-05-25T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2464,7 +2480,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2510,7 +2527,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2556,7 +2574,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2593,12 +2612,10 @@ public class MSQReplaceTest extends MSQTestBase
                      .setExpectedLastCompactionState(expectedCompactionState(
                          context,
                          Collections.emptyList(),
-                         ImmutableList.of(
-                             new StringDimensionSchema("dim1"),
-                             new LongDimensionSchema("cnt")
-                         ),
+                         List.of(new StringDimensionSchema("dim1"), new LongDimensionSchema("cnt")),
                          GranularityType.ALL,
-                         Intervals.ETERNITY
+                         Intervals.ETERNITY,
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2668,7 +2685,8 @@ public class MSQReplaceTest extends MSQTestBase
                              new LongDimensionSchema("cnt")
                          ),
                          GranularityType.DAY,
-                         Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z")
+                         Intervals.of("2016-06-01T00:00:00.000Z/2016-06-03T00:00:00.000Z"),
+                         new CompactionTransformSpec(new NotDimFilter(new NullFilter("dim1", null)))
                      ))
                      .verifyResults();
   }
@@ -2766,6 +2784,25 @@ public class MSQReplaceTest extends MSQTestBase
         new Object[]{978393600000L, "def", 1L},
         new Object[]{978480000000L, "abc", 1L}
     );
+  }
+
+  private CompactionState expectedCompactionState(
+      Map<String, Object> context,
+      List<String> partitionDimensions,
+      List<DimensionSchema> dimensions,
+      GranularityType segmentGranularity,
+      Interval interval,
+      CompactionTransformSpec transformSpec
+  )
+  {
+    CompactionState state = expectedCompactionState(
+        context,
+        partitionDimensions,
+        dimensions,
+        segmentGranularity,
+        interval
+    );
+    return state == null ? null : state.toBuilder().transformSpec(transformSpec).build();
   }
 
   private CompactionState expectedCompactionState(
